# payd

./: .example.env  .gitignore  API_DOCUMENTATION.md  Dockerfile  README.md  TECHNOLOGIES.md  compose.override.yml  compose.prod.yml  compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: feature.md
api/: auth.py  endpoints.py  exceptions.py  models.py  schemas.py  tasks.py  tests.py  utils.py  views.py
api/migrations/: 0001_initial.py  0002_transaction.py  0002_transaction_paid_at_alter_apikey_is_active_and_more.py  0003_alter_wallet_balance.py  0003_wallet.py  0004_alter_transaction_reference.py  0005_apikey_lookup_hint.py  0006_alter_wallet_wallet_number.py  0007_alter_wallet_balance_alter_wallet_wallet_number_and_more.py
api/routes/: __init__.py  auth.py  payment.py  transactions.py  user.py  wallet.py  webhooks.py
api/tests/: test_error_handling.py
payd/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
