[project]
name = "payd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.0"
dependencies = [
    "django[argon2,pylint]>=6.0",
    "django-ninja>=1.5.1",
    "google>=3.0.0",
    "paystack-api-wrapper>=0.1.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "psycopg[binary]==3.2.10",
    "dj-database-url==3.0.1",
    "uvicorn[standard]>=0.20.0",
    "black>=25.11.0",
    "pyjwt>=2.10.1",
    "pylint>=4.0.4",
    "pylint-django>=2.5.2",
]
