[project]
name = "payd"
version = "0.1.0"
description = "A lean wallet service built with Django Ninja."
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = [
    "django[argon2,pylint]==5.2.9",
    "django-ninja==1.5.1",
    "google==3.0.0",
    "paystack-api-wrapper==0.1.1",
    "python-dotenv==1.2.1",
    "requests==2.32.5",
    "psycopg[binary]==3.2.10",
    "dj-database-url==3.0.1",
    "uvicorn[standard]==0.38.0",
    "black==25.11.0",
    "pyjwt==2.10.1",
    "pylint==4.0.4",
    "pylint-django==2.5.2",
    "celery==5.6.0",
    "django-celery-beat==2.8.1",
    "redis==7.1.0",
    "django-celery-results==2.6.0",
    "amqp==5.3.1",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "asgiref==3.11.0",
    "astroid==4.0.2",
    "beautifulsoup4==4.14.3",
    "billiard==4.2.4",
    "certifi==2025.11.12",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1.2",
    "click-repl==0.3.0",
    "cron-descriptor==2.0.6",
    "dill==0.4.0",
    "django-timezone-field==7.2.1",
    "exceptiongroup==1.3.1",
    "h11==0.16.0",
    "httptools==0.7.1",
    "idna==3.11",
    "isort==7.0.0",
    "kombu==5.6.1",
    "mccabe==0.7.0",
    "mypy-extensions==1.1.0",
    "packaging==25.0",
    "pathspec==0.12.1",
    "platformdirs==4.5.1",
    "prompt-toolkit==3.0.52",
    "psycopg-binary==3.2.10",
    "pycparser==2.23",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pylint-plugin-utils==0.9.0",
    "python-crontab==3.3.0",
    "python-dateutil==2.9.0.post0",
    "pytokens==0.3.0",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "six==1.17.0",
    "soupsieve==2.8",
    "sqlparse==0.5.4",
    "tomlkit==0.13.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "tzlocal==5.3.1",
    "urllib3==2.6.0",
    "uvloop==0.22.1",
    "vine==5.1.0",
    "watchfiles==1.1.1",
    "wcwidth==0.2.14",
    "websockets==15.0.1",
]
